<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_name"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/et_pwd"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/text_login" />

    <TextView
        android:id="@+id/tv_login_success"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
</LinearLayout>